--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+        <script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+        <script src="semantic/dist/semantic.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     </head>
     <body>
-        <h1>Welcome to my Blog Site!</h1>
+        <h2 class="ui header">
+            <i class="comment alternate icon"></i>
+            <div class="content">
+                Welcome to my Blog Site!
+            </div>
+        </h2>
 
         <div id='blogPosts'>
             <blog-post
@@ -17,25 +28,43 @@
             ></blog-post>
         </div>
         
-        <div id='blogPostCreation'>
-            <h2>Make a new blog post</h2>
-            <input v-model='title'><br>
-            <input v-model='username'><br>
-            <input v-model='date'><br>
-            <input v-model='content'><br>
-            <button v-on:click='publishPost'>Publish Post</button>
+        <div id='blogPostCreation' class='ui fluid raised card'>
+            <div class="ui header">Make a new blog post</div>
+            <input v-model='title' placeholder='Post Title'><br>
+            <input v-model='username' placeholder='Username'><br>
+            <input v-model='date' placeholder='Date'><br>
+            <input v-model='content' placeholder='Description'><br>
+            <div class="extra content">
+                <button v-on:click='publishPost' class="ui button">Publish Post</button>
+            </div>
         </div>
 
         <script>
 
         Vue.component('blog-post', {
             props: ['blogpost'],
-            template: `<div id='singleBlogPost'>
-                        <h2>{{ blogpost.title }}</h2>
-                        <h3>{{ blogpost.username }}</h3>
-                        <h4>{{ blogpost.date }}</h4>
-                        <p>{{ blogpost.content }}</p>
-                    </div>`,
+            template: `<div id='singleBlogPost' class='ui fluid raised card'>
+                            <div class="content">
+                                <div class="header">{{ blogpost.title }}</div>
+                            </div>
+                            <div class="content">
+                                <h4 class="ui sub header">{{ blogpost.date }}</h4>
+                                <div class="ui small feed">
+                                <div class="event">
+                                    <div class="content">
+                                        <div class="summary">
+                                            {{ blogpost.content }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="event">
+                                </div>
+                                </div>
+                            </div>
+                            <div class="extra content">
+                                <h5>Posted by {{ blogpost.username }}</h5
+                            </div>
+                        </div>`,
         })
 
         var blogVue = new Vue({
